# webCAT

./: .coveragerc  .dockerignore  .envrc  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.build  Makefile  Pipfile  Procfile  README.md  app.yaml  compile  default.nix  docker-compose-prod.yml  docker-compose.yml  manage.py  mix.exs  overrides.nix  package.yaml  poetry.toml  pyproject.toml  pytest.ini  requirements.txt  secrets.sh  shell.nix  stack.yaml  webcat.cabal
accounts/: admin.py  forms.py  models.py  urls.py  views.py
api/: .gitignore  README.md  docker-compose.yml  mix.exs
app/: .dockerignore  .gitignore  app.yaml  index.html  package.json  tsconfig.json  webpack.config.js
assets/: .editorconfig  .terserrc  elm.json  index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tslint.json  webpack.config.js
classroom/: forms.py  models.py  urls.py  views.py
config/: config.exs  dev.exs  prod.exs  test.exs
dashboard/: apps.py  forms.py  urls.py  views.py
docker/: Dockerfile  README.md  entrypoint.sh  init-letsencrypt.sh
feedback/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
frontend/: .babelrc  app.js  elm.json  index.html  package.json
inbox/: forms.py  models.py  urls.py  views.py
lib/: release_tasks.ex  webcat.ex  webcat_web.ex
notes/: forms.py  models.py  urls.py  views.py
rel/: config.exs
server/: .gitignore  app.yaml  mix.exs
sql/: R__Triggers.sql  V2__Initial_from_backup.sql
templates/: admin-css.html  admin-js.html  base.html  bootstrap-elements.html  charts.html  (+1 more)
(+943 files in other folders)
